--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SA_PASSWORD=@Hieu05052005
-PFX_PASSWORD=@Hieu05052005
+SA_PASSWORD=@Leduong55
+PFX_PASSWORD=@Leduong55
 
 # MinIO Credentials
 MINIO_ROOT_USER=minioadmin
-MINIO_ROOT_PASSWORD=@Hieu05052005
+MINIO_ROOT_PASSWORD=@Leduong55
