--- a/WebBanHangOnline/appsettings.json
+++ b/WebBanHangOnline/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=SPRINGMUCH;Database=WebBanHangOnlineDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=LAPTOP-US7RHJNB\\DUO;Database=WebBanHangOnlineDB;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
