--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - Minio__AccessKey=${MINIO_ROOT_USER}
       - Minio__SecretKey=${MINIO_ROOT_PASSWORD}
     volumes:
-      - /c/Users/Admin/.aspnet/https/aspnetapp.pfx:/https/aspnetapp.pfx:ro
+     - C:/Users/Admin/.aspnet/https/aspnetapp.pfx:/https/aspnetapp.pfx:ro
     depends_on:
       - db
       - minio
